--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     <button>
       Learn more
     </button>
+    <div class="mark">
+      <img src="./images/client-databiz.svg" alt="client-databiz">
+      <img src="./images/client-audiophile.svg" alt="client-audiophile">
+      <img src="./images/client-meet.svg" alt="client-meet">
+      <img src="./images/client-maker.svg" alt="client-maker">
+    </div>
   </section>
   <section class="pic">
     <img src="./images/image-hero-desktop.png" alt="" class="desktopImg">
