--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div>
     <img src="./images/logo.svg" alt="snap">
     <ul class="option">
-      <li class="subList">
+      <li class="subList" id="feature">
         <a href="#">Features<img src="./images/icon-arrow-down.svg" alt="down"></a>
         <ul class="dropdown">
           <li><a href="#"><img src="./images/icon-todo.svg" alt="icon-todo">Todo List</a></li>
@@ -33,7 +33,13 @@
           <li><a href="#"><img src="./images/icon-planning.svg" alt="icon-planning">Planning</a></li>
         </ul>
       </li>
-      <li><a href="#">Company<img src="./images/icon-arrow-down.svg" alt="down"></a></li>
+      <li class="subList" id="company"><a href="#">Company<img src="./images/icon-arrow-down.svg" alt="down"></a>
+      <ul class="dropdown">
+        <li><a href="#">History</a></li>
+        <li><a href="#">Our Team</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+      </li>
       <li><a href="#">Careers</a></li>
       <li><a href="#">About</a></li>
     </ul>
