--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <body>
 <nav>
   <img src="./images/logo.svg" alt="" class="mobileLogo">
-  <div>
-    <img src="./images/logo.svg" alt="snap">
+  <div id="menu">
+    <img src="./images/logo.svg" alt="snap" id="logo">
+    <img src="./images/icon-close-menu.svg" alt="" class="closeMenu">
     <ul class="option">
       <li class="subList" id="feature">
         <a href="#">Features<img src="./images/icon-arrow-down.svg" alt="down"></a>
@@ -44,7 +45,7 @@
       <li><a href="#">About</a></li>
     </ul>
   </div>
-  <div>
+  <div id="membership">
     <ul class="member">
       <li><a href="#">Login</a></li>
       <li><a href="#" class="register">Register</a></li>
