--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="./images/icon-close-menu.svg" alt="" class="closeMenu">
     <ul class="option">
       <li class="subList" id="feature">
-        <a href="#">Features<img src="./images/icon-arrow-down.svg" alt="down"></a>
+        <a href="#">Features<img src="./images/icon-arrow-down.svg" alt="down" class="downArrow arrowShow"><img src="./images/icon-arrow-up.svg" alt="up" class="upArrow arrowHide"></a>
         <ul class="dropdown">
           <li><a href="#"><img src="./images/icon-todo.svg" alt="icon-todo">Todo List</a></li>
           <li><a href="#"><img src="./images/icon-calendar.svg" alt="icon-calendar">Calender</a></li>
@@ -34,7 +34,7 @@
           <li><a href="#"><img src="./images/icon-planning.svg" alt="icon-planning">Planning</a></li>
         </ul>
       </li>
-      <li class="subList" id="company"><a href="#">Company<img src="./images/icon-arrow-down.svg" alt="down"></a>
+      <li class="subList" id="company"><a href="#">Company<img src="./images/icon-arrow-down.svg" alt="down" class="downArrow arrowShow"><img src="./images/icon-arrow-up.svg" alt="up" class="upArrow arrowHide"></a>
       <ul class="dropdown">
         <li><a href="#">History</a></li>
         <li><a href="#">Our Team</a></li>
