--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +19,9 @@
   </style>
 </head>
 <body>
+  <div class="blackBack" style="visibility: hidden; opacity: 0;"></div>
 <nav>
-  <img src="./images/logo.svg" alt="" class="mobileLogo">
+  <img src="./images/logo.svg" alt="snap" class="mobileLogo">
   <div id="menu">
     <img src="./images/logo.svg" alt="snap" id="logo">
     <img src="./images/icon-close-menu.svg" alt="" class="closeMenu">
@@ -84,4 +85,5 @@
   </div>
 </body>
 <script src="./app.js"></script>
+<script src="./slide-function.js"></script>
 </html>
